--- a/Password-Manager-UI/src/app/Components/passwords-list/passwords-list.component.html
+++ b/Password-Manager-UI/src/app/Components/passwords-list/passwords-list.component.html
@@ -3,14 +3,12 @@
     <div class="card green" *ngFor="let password of passwordsList">
       <div class="additional">
         <div class="user-card">
+          <a class="btn aria-hidden" (click)="deletepassword(password.id)"><i class='fas fa-trash' style='color: red'></i></a>
          
           <div class="points center">
             Safe
           </div>
           <img [src]="password.imageUrl" width="80" height="80" viewBox="0 0 250 250" alt="facebook" aria-labelledby="title desc" class="center">
-
-            
-            
         </div>
         <div class="more-info">
             <br>
@@ -118,7 +116,7 @@
 
       <!--Footer-->
       <div class="modal-footer justify-content-center">
-        <button type="submit" class="btn btn-info">Add</button>
+        <button type="submit" class="btn btn-info" #closeModal>Add</button>
         <a type="button" class="btn btn-outline-info waves-effect" data-dismiss="modal">Cancel</a>
       </div>
     </form> 
